--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,9 @@
         "php": "^7.2",
 
         "sylius/sylius": "^1.4.0",
-        "setono/tag-bag-bundle": "0.*"
+        "setono/tag-bag-bundle": "^1.0"
     },
     "require-dev": {
-        "behat/behat": "^3.4",
-        "behat/mink": "^1.7@dev",
-        "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-selenium2-driver": "^1.3",
-        "friends-of-behat/page-object-extension": "^0.3",
-        "friends-of-behat/suite-settings-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^2.0",
-        "friends-of-behat/variadic-extension": "^1.1",
-        "lakion/mink-debug-extension": "^1.2.3",
         "phpspec/phpspec": "^5.0",
         "phpstan/phpstan-doctrine": "^0.10",
         "phpstan/phpstan-shim": "^0.10",
@@ -29,7 +19,6 @@
         "phpunit/phpunit": "^6.5",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^5.0",
-        "setono/tag-bag-bundle": "^0.2",
         "sylius-labs/coding-standard": "^2.0",
         "symfony/browser-kit": "^3.4|^4.1",
         "symfony/debug-bundle": "^3.4|^4.1",
@@ -88,7 +77,7 @@
             "@analyse"
         ],
         "check-style": "./vendor/bin/ecs check src",
-        "fix-style": "./vendor/bin/ecs check src",
+        "fix-style": "./vendor/bin/ecs check src --fix",
         "analyse": [
             "@ensure-test-container-exists",
             "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src"
