--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ env:
         - SYMFONY_VERSION="3.4.*"
         - SYMFONY_VERSION="4.1.*"
 
+before_install:
+    - phpenv config-rm xdebug.ini
+    - echo "memory_limit=4096M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+
 install:
     - composer install --no-interaction --prefer-dist
 
