--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,16 @@
 {
     "name": "setono/sylius-tag-bag-plugin",
     "type": "sylius-plugin",
-    "keywords": ["sylius", "sylius-plugin"],
     "description": "Plugin that integrates Setono/TagBagBundle into your Sylius project",
+    "keywords": [
+        "sylius",
+        "sylius-plugin"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "sylius/sylius": "^1.4",
-        "setono/tag-bag-bundle": "^2.0"
+        "setono/tag-bag-bundle": "^2.0",
+        "sylius/sylius": "^1.4"
     },
     "require-dev": {
         "setono/code-quality-pack": "^1.3.1",
@@ -16,7 +19,14 @@
         "symfony/intl": "^4.4 || ^5.1",
         "symfony/web-profiler-bundle": "^4.4 || ^5.1"
     },
-    "prefer-stable": true,
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Setono\\SyliusTagBagPlugin\\": "src/"
@@ -28,20 +38,30 @@
             "Tests\\Setono\\SyliusTagBagPlugin\\": "tests/"
         }
     },
-    "config": {
-        "sort-packages": true
-    },
+    "prefer-stable": true,
     "scripts": {
-        "try": [
-            "@ensure-vendors-installed",
-            "@assets",
-            "@fixtures",
-            "@run"
+        "all": [
+            "@checks"
         ],
+        "analyse": "vendor/bin/phpstan analyse -c phpstan.neon -l max src",
         "assets": [
             "@ensure-assets-installed",
             "@ensure-assets-compiled"
         ],
+        "check-style": "vendor/bin/ecs check src",
+        "checks": [
+            "@check-style",
+            "@analyse"
+        ],
+        "ensure-assets-compiled": "[[ -d tests/Application/public/assets ]] || (cd tests/Application && yarn build && composer ensure-env-copied && bin/console assets:install public -e ${SYMFONY_ENV:-'dev'})",
+        "ensure-assets-installed": "[[ -d tests/Application/node_modules ]] || (cd tests/Application && yarn install)",
+        "ensure-database-created": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:database:create --if-not-exists -e ${SYMFONY_ENV:-'dev'})",
+        "ensure-env-copied": "([[ ${SYMFONY_ENV:-'dev'} == 'dev' ]] && composer ensure-env-dev-copied) || ([[ ${SYMFONY_ENV:-'dev'} == 'test' ]] && composer ensure-env-test-copied) || echo 'Unknown environment ${SYMFONY_ENV}'",
+        "ensure-env-dev-copied": "(cd tests/Application && ([[ -f .env.dev.local ]] || cp .env  .env.dev.local))",
+        "ensure-env-test-copied": "(cd tests/Application && ([[ -f .env.test.local ]] || cp .env.test .env.test.local))",
+        "ensure-schema-updated": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:schema:update --force -e ${SYMFONY_ENV:-'dev'})",
+        "ensure-vendors-installed": "[[ -f vendor/autoload.php ]] || php -d memory_limit=-1 /usr/local/bin/composer install",
+        "fix-style": "vendor/bin/ecs check src --fix",
         "fixtures": [
             "@ensure-database-created",
             "@ensure-schema-updated",
@@ -51,28 +71,11 @@
             "@ensure-env-copied",
             "(cd tests/Application && bin/console server:run -d public -e ${SYMFONY_ENV:-'dev'})"
         ],
-        "all": [
-            "@checks"
-        ],
-        "checks": [
-            "@check-style",
-            "@analyse"
-        ],
-        "check-style": "vendor/bin/ecs check src",
-        "fix-style": "vendor/bin/ecs check src --fix",
-        "analyse": "vendor/bin/phpstan analyse -c phpstan.neon -l max src",
-        "ensure-vendors-installed": "[[ -f vendor/autoload.php ]] || php -d memory_limit=-1 /usr/local/bin/composer install",
-        "ensure-assets-installed": "[[ -d tests/Application/node_modules ]] || (cd tests/Application && yarn install)",
-        "ensure-assets-compiled": "[[ -d tests/Application/public/assets ]] || (cd tests/Application && yarn build && composer ensure-env-copied && bin/console assets:install public -e ${SYMFONY_ENV:-'dev'})",
-        "ensure-database-created": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:database:create --if-not-exists -e ${SYMFONY_ENV:-'dev'})",
-        "ensure-schema-updated": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:schema:update --force -e ${SYMFONY_ENV:-'dev'})",
-        "ensure-env-copied": "([[ ${SYMFONY_ENV:-'dev'} == 'dev' ]] && composer ensure-env-dev-copied) || ([[ ${SYMFONY_ENV:-'dev'} == 'test' ]] && composer ensure-env-test-copied) || echo 'Unknown environment ${SYMFONY_ENV}'",
-        "ensure-env-test-copied": "(cd tests/Application && ([[ -f .env.test.local ]] || cp .env.test .env.test.local))",
-        "ensure-env-dev-copied":  "(cd tests/Application && ([[ -f .env.dev.local ]] || cp .env  .env.dev.local))"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0-dev"
-        }
+        "try": [
+            "@ensure-vendors-installed",
+            "@assets",
+            "@fixtures",
+            "@run"
+        ]
     }
 }
