--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "sylius/sylius": "^1.4"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "setono/code-quality-pack": "^1.3.1",
         "symfony/debug-bundle": "^4.4 || ^5.1",
         "symfony/dotenv": "^4.4 || ^5.1",
