--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "setono/tag-bag-bundle": "^2.0",
         "sylius/sylius": "^1.4"
     },
